--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "postcss-csso": "^3.0.0",
     "postcss-loader": "^2.0.10",
     "rimraf": "^2.6.2",
+    "sinon": "^4.5.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.1",
     "stylus": "^0.54.5",
