--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,10 @@
     ],
     "quotes": [
       "error",
-      "single"
+      "single",
+      { 
+        "allowTemplateLiterals": true 
+      }
     ],
     "semi": [
       "error",
