--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "browser": true,
     "commonjs": true,
     "es6": true,
-    "jquery": true
+    "jquery": true,
+    "jasmine": true
   },
   "globals": {},
   "extends": ["standard"],
