--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pilipa-terrace",
-  "version": "1.0.0-alpha.27",
+  "version": "1.0.3",
   "description": "噼里啪b端框架",
   "main": "libs/index.js",
   "typings": "libs/index.d.ts",
@@ -19,18 +19,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "antd": "3.10.1",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
     "@types/jquery": "^3.3.22",
-    "@types/lodash": "^4.14.117",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-router": "^4.4.0",
     "@types/react-router-dom": "^4.3.1",
+    "antd": "3.10.1",
     "autoprefixer": "^7.2.5",
     "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^6.26.0",
