--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pilipa-terrace",
-  "version": "1.0.3",
+  "version": "1.0.3-alpha.3",
   "description": "噼里啪b端框架",
   "main": "libs/index.js",
   "typings": "libs/index.d.ts",
