--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 # This file is a template, and might need editing before it works on your project.
 # Official framework image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/node/tags/
-image: registry.i-counting.cn/pilipa/karma
+image: registry-vpc.cn-beijing.aliyuncs.com/i-counting/karma:latest
 
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
 # stages:
@@ -13,7 +13,6 @@ cache:
   - node_modules
 before_script:
   - yarn install
-  - yarn add ali-oss@5.1.1 font-awesome@4.7.0 jquery@3.3.1 react@16.3.1 react-dom@16.3.1 viewerjs@1.0.0 -P
 test:
   script:
     - yarn libs
