--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pilipa-terrace",
-  "version": "1.0.3-alpha.3",
-  "description": "噼里啪b端框架",
+  "version": "1.0.3-alpha.4",
+  "description": "噼里啪b端公共服务",
   "main": "libs/index.js",
   "typings": "libs/index.d.ts",
   "scripts": {
