--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pilipa-terrace",
-  "version": "1.0.13-alpha.9",
+  "version": "1.0.13-alpha.13",
   "description": "噼里啪b端公共服务",
   "main": "libs/index.js",
   "typings": "libs/index.d.ts",
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "pilipa-analytics": "^1.0.5"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
