--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pilipa-terrace",
-  "version": "1.0.14-alpha.1",
+  "version": "1.0.14-alpha.6",
   "description": "噼里啪b端公共服务",
   "main": "libs/index.js",
   "typings": "libs/index.d.ts",
@@ -21,10 +21,13 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
+    "jquery": "^3.4.1",
+    "pilipa": "^3.0.8-alpha.2",
     "pilipa-analytics": "^1.0.5"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
+    "@types/jquery": "^3.3.29",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-router": "^4.4.0",
