[fix] iframe添加首页中转 related to issue #1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pilipa-terrace",
-  "version": "1.0.14-alpha.23",
+  "version": "1.0.14-alpha.25",
   "description": "噼里啪b端公共服务",
   "main": "libs/index.js",
   "typings": "libs/index.d.ts",
@@ -75,6 +75,7 @@
     "koa-proxies": "^0.6.2",
     "koa-static": "^4.0.2",
     "koa-webpack-middleware": "^1.0.7",
+    "pilipa-terrace": "^1.0.14-alpha.24",
     "postcss-csso": "^3.0.0",
     "postcss-loader": "^2.0.10",
     "prop-types": "15.6.2",
