--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pilipa-terrace",
-  "version": "1.0.14-alpha.28",
+  "version": "1.0.15-alpha.4",
   "description": "噼里啪b端公共服务",
   "main": "libs/index.js",
   "typings": "libs/index.d.ts",
@@ -21,13 +21,11 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
-    "jquery": "^3.4.1",
-    "pilipa": "^3.0.8-alpha.2",
+    "pilipa": "^3.0.8-alpha.7",
     "pilipa-analytics": "^1.0.5"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
-    "@types/jquery": "^3.3.29",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-router": "^4.4.0",
@@ -37,6 +35,7 @@
     "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.12.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
@@ -75,7 +74,6 @@
     "koa-proxies": "^0.6.2",
     "koa-static": "^4.0.2",
     "koa-webpack-middleware": "^1.0.7",
-    "pilipa-terrace": "^1.0.14-alpha.24",
     "postcss-csso": "^3.0.0",
     "postcss-loader": "^2.0.10",
     "prop-types": "15.6.2",
@@ -99,6 +97,7 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^0.6.2",
     "webpack": "4.5.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-middleware": "^2.0.0",
     "webpack-hot-middleware": "^2.21.2"
   }
